# tools-orca

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  makefile
.github/workflows/: build.yml
docs/: README.md
pkg/: mingw-w64-x86_64.cmake
release/linux/: mra
src/: arc.c  arc.h  globals.h  json.c  json.h  main.c  mra.c  mra.h  rom.c  unzip.c  unzip.h  utils.c  utils.h  version.h.in
tests/: orca_dir.sh  test.sh
tests/samples/: Crater Raider MiST.mra  Crater Raider.mra  Domino Man.mra  Final Fight.mra  Spy Hunter.mra  ghouls.mra
tests/samples/Robotron/: Robotron 2084 (2012 'wave 201 start' hack).mra  Robotron 2084 (2015 'tie-die V2' hack).mra  Robotron 2084 (Hacked Patched Blue-201) - HBMame.mra  Robotron 2084 (Patched) - HBMame.mra  Robotron 2084 (Tie Die) - HBMame.mra  Robotron 2084 (Yellow-Orange label).mra  Robotron2084 (1987 'shot-in-the-corner' bugfix).mra
